added merger scenario figure

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -82,8 +82,8 @@ weak lensing analysis by \cite{Jee13}. The weak lensing analysis shows
 a mass ratio of $\sim$2:1  between the two main subclusters, named according to their location as the northeast (NW) and southeast (SE) subclusters respectively. 
 (See Figure~\ref{fig:config}). El Gordo has interesting intracluster medium morphology as shown in the X-ray. In the northwest, it shows a wake feature, i.e.,
 turbulent flow due to object of higher density moving through fluids, while in the southeast, it shows
-highest X-ray emissivity indicative of a cold gas core southeast of the
-wake. The cold gas core may have passed from the northwest to the southeast
+highest X-ray emissivity indicative of a cool gas core southeast of the
+wake. The cool gas core may have passed from the northwest to the southeast
 to have caused this morphology (\citealt{M12}, hereafter M12). 
 The extended mass distribution of El Gordo also makes it a good
 gravitational lens. \cite{Zitrin13} have found multiple strong
@@ -106,7 +106,7 @@ created from a merger \citep{L13}.
 		southeast radio relic (SE relic) \citep{L13}.
 		\label{fig:config}}
 \end{figure}
-El Gordo is one of small sample of galaxy clusters ($\sim50$) that have
+El Gordo is one of the small samples of galaxy clusters ($\sim50$) that have
 been associated with a radio relic and show dissociation between the X-ray
 gas and the DM subclusters. Even fewer of them have been studied in
 great details, making El Gordo a valuable candidate for further analysis.\par 
@@ -766,6 +766,28 @@ work of \cite{Donnert13} and our work.
 
 
 \subsection{Comparison to the merger scenarios of other merging clusters of galaxies}
+
+\begin{figure}
+	\includegraphics[width=\linewidth]{merger_scenario.pdf}
+	\caption{Illustration of the different merger scenarios, i.e. projected displacement
+		($s_{proj}$) from the center of mass of different components, of El
+		Gordo and the Bullet Cluster, at different stage of the merger.  
+		Shortly after the core-passage
+		phase of the merger, the cool core had to travel through a dense gas region.
+		Ram pressure would strip the gas component from a subcluster and cause the
+		cool core to lag behind the DM peak (This corresponds to the scenario
+		for the Bullet Cluster). As time went by, the DM and the cool core of
+		a subcluster would propagate outwards while slowing down, they would
+		encounter a region with much lower gas density. At this later stage
+		, the ram pressure from the lower density gas in the
+		outskirt region would decrease drastically so the cool core would not be slowed
+		down as much, as if it had received a kick in a slingshot. During this
+		later stage, the DM component would have also reached the
+		apoapsis and started returning to the center of mass for a second
+		core-passage. The cool core would then be able to travel further away from
+		the center of mass than the DM component. (El Gordo scenario)
+	\label{fig:merger_scenario}}
+\end{figure}
 The hypothesis of El Gordo being in the outbound phase is more plausible when
 we compare the details of the observables of El Gordo to the Bullet
 Cluster (\citealt{Bradac2006b}, \citealt{Springel2007},
@@ -779,43 +801,30 @@ In particular, the inferred outbound $TSC_0 / T$ of the Bullet Cluster and El Go
 are similar. If instead, the El Gordo
 is in the outbound phase of the merger (i.e. $TSC_0$ for El Gordo is
 invalid) while the Bullet Cluster is in the inbound phase, the differences
-in the observables of El Gordo and the Bullet can be explained.\par
+in the observables of El Gordo and the Bullet Cluster can be explained.\par
 First, the merger shock front of the Bullet Cluster is
 observed only in the X-ray, meaning that the shock has not had the
 time to propagate to the outskirts of the cluster (\citealt{Bruggen2011},
 \citealt{Markevitch2007}), and this bow shock is indeed observed to closely
-lead the cold core by $\sim 0.08~\mega$pc, assuming they are propagating outwards.
-On the other hand, indirect observables of the merger shocks of
-El Gordo can only be detected through the radio relic, and the shock is
+lead the corresponding cool core by $\sim 0.08~\mega$pc, assuming they are
+propagating outwards. On the other hand, indirect observables of the merger
+shocks of El Gordo can only be detected through the radio relic, and the shock is
 further offset from the corresponding subcluster ($\sim 0.5~\mega$pc) and
 the cool core ($\sim 0.4~\mega$pc). (Should discuss the Mach number,
 the speed of sounds in each cluster, and the DM velocities) \par 
 Second, for the Bullet Cluster, the cool core (or the bullet) is closer to the
-interior of the cluster than the corresponding dark matter subcluster mass
+interior of the cluster than the corresponding DM subcluster mass
 peak, whereas, the cool core of El Gordo is further offset from the center of
 mass than the corresponding SE subcluster (See Fig.~\ref{fig:config}). 
 Both configurations of cool core relative to the subcluster mass peak are
 mentioned in \cite{Markevitch2007}, with the case of the Bullet Cluster
 explained by the ram pressure stripping effect, and the case of El Gordo
 explained by the ram pressure slingshot effect, which only occurs at a
-later stage of a merger. \par 
-(maybe I should depict the following scenario in a
-cartoon and use the passage as a caption) Shortly after the core-passage
-phase of the merger, the cool core had to travel through a dense gas region.
-Ram pressure would strip the gas component from a subcluster and cause the
-cool core to lag behind the DM peak. As time went by, the DM and the cool core of
-a subcluster would propagate outwards while slowing down, they would
-encounter a region with much lower gas density. At this later stage
-, the ram pressure from the lower density gas in the
-outskirt region would decrease drastically so the cool core would not be slowed
-down as much, as if it had received a kick in a slingshot. During this
-later stage, the DM component would have also reached the
-apoapsis and started returning for a second core-passage. The cool core
-would then be able to travel further away from the center of mass than
-the DM component. Simulation of a major merger by \cite{Mathis05} with
-similar mass and mass ratio as El Gordo confirms this picture: it shows the
-turn-around of the cool core can occur after the apoapsis of the DM
-component, resulting in the cool core being further
+later stage of a merger. (See Fig. \ref{fig:merger_scenario})\par 
+Simulation of a major merger by
+\cite{Mathis05} with similar mass and mass ratio as El Gordo confirms this
+picture: it shows the turn-around of the cool core can occur after the
+apoapsis of the DM component, resulting in the cool core being further
 away from the center of mass than the dark matter by as much as $\sim
 0.2~\mega$pc.  The cool core of El Gordo shows a comet-like
 morphology that suggests an outbound motion of the cool core, however, from
@@ -827,9 +836,17 @@ bimodal cluster merger A168 with a cool front leading the corresponding DM
 subcluster \citep{Hallman04}.
 
 \subsection{El Gordo as a probe of dark matter self-interaction}
+
+% cite Markevitch paper about the self-interacting cross section 
+% talk about how different variables would have different effects 
+
+
+% spatial separation of gas-DM not really great for constraining sigma
+% 
+
 Time variability of the gas-DM offset makes it not a very suitable probe
 
-
+galaxy-DM offset remain to investigate how galaxy propagates 
 
 the Musketball Cluster (\citealt{Dawson12}, \citetalias{D13}). 
 
@@ -1225,7 +1242,8 @@ have used priors on $\beta$ as:
 \end{equation}
 This conservative prior is chosen to reflect our belief that the
 NW shockfront should propagate at approximately $v_{3D, NW}(t_{col})$ in the
-center-of-mass frame, and likewise for the SE shockfront.  
+center-of-mass frame, and likewise for the SE shockfront, although we do
+not think that $\beta_{SE} = \beta_{NW}$ has to be necessarily true. 
 %When we assume $\langle v_{relic} \rangle / v_{3D, 1}(t_{col}) = 1.5$ (uppermost
 %panel of Figure \ref{fig: positionprior}), $\langle v_{relic} \rangle$
 %corresponds to an time-averaged velocity of $\sim3800~\kilo
