--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -794,7 +794,7 @@ Cluster (\citealt{Bradac2006b}, \citealt{Springel2007},
 \citealt{Mastropietro2008a}).
 A lot of the inferred properties are similar between the two clusters and
 both clusters were observed in similar wavelengths. Both clusters are
-considered major mergers of subclusters of significant masses. The inferred
+considered bimodal major mergers of subclusters of significant masses. The inferred
 merger velocities are comparable at around $2600~\kilo\meter~\second^{-1}$
 and $\alpha$ of both clusters are around $20 \degree$. 
 In particular, the inferred outbound $TSC_0 / T$ of the Bullet Cluster and El Gordo
@@ -804,23 +804,26 @@ invalid) while the Bullet Cluster is in the inbound phase, the differences
 in the observables of El Gordo and the Bullet Cluster can be explained.\par
 First, the merger shock front of the Bullet Cluster is
 observed only in the X-ray, meaning that the shock has not had the
-time to propagate to the outskirts of the cluster (\citealt{Bruggen2011},
+time to propagate to the outskirt of the cluster (\citealt{Bruggen2011},
 \citealt{Markevitch2007}), and this bow shock is indeed observed to closely
-lead the corresponding cool core by $\sim 0.08~\mega$pc, assuming they are
-propagating outwards. On the other hand, indirect observables of the merger
+lead the corresponding less massive subcluster by $\sim 0.08~\mega$pc,
+assuming they are propagating outwards. On the other hand, indirect observables of the merger
 shocks of El Gordo can only be detected through the radio relic, and the shock is
 further offset from the corresponding subcluster ($\sim 0.5~\mega$pc) and
-the cool core ($\sim 0.4~\mega$pc). (Should discuss the Mach number,
-the speed of sounds in each cluster, and the DM velocities) \par 
+the cool core ($\sim 0.4~\mega$pc). \par
+%(Should discuss the Mach number,
+%the speed of sounds in each cluster, and the DM velocities)  
 Second, for the Bullet Cluster, the cool core (or the bullet) is closer to the
-interior of the cluster than the corresponding DM subcluster mass
+interior of the cluster than the corresponding less massive DM subcluster mass
 peak, whereas, the cool core of El Gordo is further offset from the center of
-mass than the corresponding SE subcluster (See Fig.~\ref{fig:config}). 
+mass than the corresponding SE subcluster (See Fig.~\ref{fig:config} for
+the observed positions). 
 Both configurations of cool core relative to the subcluster mass peak are
 mentioned in \cite{Markevitch2007}, with the case of the Bullet Cluster
 explained by the ram pressure stripping effect, and the case of El Gordo
 explained by the ram pressure slingshot effect, which only occurs at a
-later stage of a merger. (See Fig. \ref{fig:merger_scenario})\par 
+later stage of a merger. (See Fig. \ref{fig:merger_scenario} for an
+illustration depicting this conjectured scenario)\par 
 Simulation of a major merger by
 \cite{Mathis05} with similar mass and mass ratio as El Gordo confirms this
 picture: it shows the turn-around of the cool core can occur after the
