--- a/texFiles/style.tex
+++ b/texFiles/style.tex
@@ -49,6 +49,7 @@
 	\newcolumntype{d}[1]{D{.}{.}{#1}}
 \usepackage{tabularx}
 \usepackage{booktabs}
+\usepackage{svg}
 \graphicspath{{graphics/}}
 \newcommand{\mc}[1]{\multicolumn{1}{c}{#1}} % handy shortcut macro
 %-----------------------------------------------------------------------
